--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,19 +43,7 @@
 .header a:hover{
   border-bottom: 2px solid rgba(255,255,255,.55);
 }
-.header .link-primary{
-  border-bottom: none;
-  background-color: #dc3545;
-  border: 2px solid #dc3545;
-  color: #212529;
-  padding: 15px 20px;
-}
-.header .link-primary:hover{
-  border-bottom: none;
-  background-color: transparent;
-  border: 2px solid #dc3545;
-  color: rgba(255,255,255,.55);
-}
+
 /* MAIN BANNER */
 /* MAIN BANNER */
 /* MAIN BANNER */
@@ -64,7 +52,7 @@
 
 #top-container{
   margin-top: 70px;
-  padding: 110px;
+  padding: 110px 0px;
   background-color: #f7f9fc;
   border-bottom: 1px solid #dde0f4;
   margin-bottom: 30px;
@@ -77,17 +65,19 @@
 
 #top-container h1{
   font-size: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 #top-container p{
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 #top-container input{
-  width: 70%;
+  width: 80%;
+  max-width: 500px;
   font-size: 24px;
-  border-radius: 5px;
   border: none;
-  padding: 6px;
+  padding: 10px;
+  display: block;
+  margin: auto;
 }
 #top-container .form-item{
   margin-bottom: 20px;
@@ -96,16 +86,91 @@
   outline: none;
 }
 #top-container button{
-  padding: 15px 20px;
-  background-color: #0d6efd;
-  border: none;
+  border-bottom: none;
+  background-color: #dc3545;
+  border: 2px solid #dc3545;
   color: white;
-  font-size: 24px;
-  border-radius: 5px;
+  padding: 15px 20px;
   cursor: pointer;
+  font-size: 24px;
+  transition: .4s;
+}
+#top-container button:hover{
+  border-bottom: none;
+  background-color: white;
+  border: 2px solid #dc3545;
+  color: #dc3545;
 }
 
+/* JOB CONTAINER */
+/* JOB CONTAINER */
+/* JOB CONTAINER */
+/* JOB CONTAINER */
+/* JOB CONTAINER */
+
+#jobs-container{
+  padding: 80px 0px;
+  color: #212529;
+}
+
+#jobs-container #job-list-title{
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+#jobs-container #job-list{
+  display: block;
+}
+
+#jobs-container .job-list-item{
+  border: 2px solid #b4b4b4;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+#jobs-container .info{
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  position: relative;
+}
+#jobs-container h3{
+  font-size: 18px;
+}
+#jobs-container h2{
+  font-size: 24px;
+}
+#jobs-container .new-job-label{
+  background-color: #ffc107;
+  padding: 5px;
+  text-align: center;
+}
+
+#jobs-container a{
+  border-bottom: none;
+  background-color: #dc3545;
+  border: 2px solid #dc3545;
+  color: white;
+  padding: 15px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: .4s;
+}
+#jobs-container a:hover{
+  border-bottom: none;
+  background-color: white;
+  border: 2px solid #dc3545;
+  color: #dc3545;
+}
 @media (max-width: 600px) {
+  .container{
+    width: 95%;
+  }
   .header button{
     display: block;
   }
@@ -119,12 +184,32 @@
     height: 0px;
     overflow: hidden;
     transition: .4s;
+    text-align: center;
   }
   .header .menu.active{
-    height: 113px;
+    height: 120px;
     transition: .4s;
   }
-  .header a{
+  .header .menu a{
     display: block;
+    padding: 20px;
+  }
+  .header .menu a:hover{
+    border-bottom: 2px solid #212529;
+  }
+}
+@media (min-width: 600px) {
+  .header .link-primary{
+    border-bottom: none;
+    background-color: #dc3545;
+    border: 2px solid #dc3545;
+    color: #212529;
+    padding: 15px 20px;
+  }
+  .header .link-primary:hover{
+    border-bottom: none;
+    background-color: transparent;
+    border: 2px solid #dc3545;
+    color: rgba(255,255,255,.55);
   }
 }
