--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
     <h1>Encontre o emprego dos seus sonhos</h1>
     <p>Somos o site com mais vagas de tecnologia do Brasil, direcionadas a home office</p>
 
-    <form action="" id="search-form" class="form">
+    <form action="/" id="search-form" class="form" method="GET">
       <div class="form-item">
-        <input type="text" placeholder="Digite a vaga que está buscando...">
+        <input type="text" placeholder="Digite a vaga que está buscando..." id="job" name="job">
       </div>
       <div class="form-item">
         <button type="submit" class="btn-primary">Procurar</button>
@@ -17,51 +17,23 @@
 <main>
   <section id="jobs-container">
     <div class="container">
-      <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
-      <ul id="job-list">
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-        <li class="job-list-item new-job">
-          <h3>Empresa</h3>
-          <h2>Título da vaga</h2>
-          <p>Salário: R$ 2000,00</p>
-          <span class="new-job-label">Nova</span>
-          <a href="" class="btn-primary">Ver vaga</a>
-        </li>
-      </ul>
+        {{#if search}}
+         <h2 id="job-list-title">Buscando vagas que contem: {{search}}</h2>
+        {{else}}
+          <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
+        {{/if}}
+        {{#each jobs}}
+          <ul id="job-list">
+            <li class="job-list-item new-job">
+              <h3>{{dataValues.company}}</h3>
+              <h2>{{dataValues.title}}</h2>
+              <p>Salário: R$ {{dataValues.salary}}</p>
+              <span class="new-job-label">Nova</span>
+              <a href="" class="btn-primary">Ver vaga</a>
+            </li>
+          </ul>
+        {{/each}}
+
     </div>
   </section>
 </main>
