--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -3,7 +3,7 @@
       <h1>Divulgue a vaga preenchendo o formulário</h1>
       <div id="form-box">
         <h2>Preencha os dados</h2>
-        <form action="" class="form">
+        <form action="/jobs/add" class="form" method="POST">
           <div class="form-item">
             <label for="title">Título:</label>
             <input required type="text" name="title" id="title" placeholder="Digite o título da vaga">
@@ -13,23 +13,24 @@
             <label for="description">Descrição:</label>
             <textarea required name="description" id="description"></textarea>
           </div>
+          <div class="form-item">
+            <label for="company">Empresa:</label>
+            <input required type="text" name="company" id="company" placeholder="Digite a empresa">
+          </div>
+          <div class="form-item">
+            <label for="email">Email para contato:</label>
+            <input required type="email" name="email" id="email" placeholder="email@email.com">
+          </div>
+          <div class="form-item">
+            <label for="salary">Salário:</label>
+            <input required type="text" name="salary" id="salary" placeholder="R$ 00,00">
+          </div>
+          <input type="hidden" name="new_job" value="1">
+          <div class="form-item">
+            <button type="submit" class="btn-primary">Enviar</button>
+          </div>
         </form>
-        <div class="form-item">
-          <label for="company">Empresa:</label>
-          <input required type="text" name="company" id="company" placeholder="Digite a empresa">
-        </div>
-        <div class="form-item">
-          <label for="email">Email para contato:</label>
-          <input required type="email" name="email" id="email" placeholder="email@email.com">
-        </div>
-        <div class="form-item">
-          <label for="salary">Salário:</label>
-          <input required type="text" name="salary" id="salary" placeholder="R$ 00,00">
-        </div>
-        <input type="hidden" name="new_job" value="1">
-        <div class="form-item">
-          <button type="submit" class="btn-primary">Enviar</button>
-        </div>
+        
       </div>
     </div>
   </div>
