--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
   <section id="jobs-container">
     <div class="container">
         {{#if search}}
-         <h2 id="job-list-title">Buscando vagas que contem: {{search}}</h2>
+         <h2 id="job-list-title">Buscando vagas com o filtro: {{search}}</h2>
         {{else}}
           <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
         {{/if}}
@@ -29,7 +29,7 @@
               <h2>{{dataValues.title}}</h2>
               <p>Salário: R$ {{dataValues.salary}}</p>
               <span class="new-job-label">Nova</span>
-              <a href="" class="btn-primary">Ver vaga</a>
+              <a href="/jobs/view/{{dataValues.id}}" class="btn-primary">Ver vaga</a>
             </li>
           </ul>
         {{/each}}
