--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,10 @@
+body{
+  background-color: #f8f9fa;
+}
 .container{
   width: 80%;
   margin: auto;
 }
-
 h3{
   font-size: 18px;
 }
@@ -69,7 +71,15 @@ h1{
 .header a:hover{
   border-bottom: 2px solid rgba(255,255,255,.55);
 }
-
+.header button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#icon-mobile{
+  color: #dc3545;
+  font-size: 20px;
+}
 /* MAIN BANNER */
 /* MAIN BANNER */
 /* MAIN BANNER */
@@ -111,7 +121,6 @@ h1{
   outline: none;
 }
 
-
 /* JOB CONTAINER */
 /* JOB CONTAINER */
 /* JOB CONTAINER */
@@ -129,36 +138,29 @@ h1{
   margin-bottom: 30px;
 }
 #jobs-container #job-list{
-  display: block;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
 #jobs-container .job-list-item{
-  border: 2px solid #b4b4b4;
+  border: 2px solid red;
   padding: 20px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 10px;
 }
 
 #jobs-container h2{
-  margin: 0px;
+  margin-bottom: 10px;
 }
-#jobs-container .info{
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-  position: relative;
+#jobs-container h3{
+  margin-bottom: 7px;
+}
+#jobs-container p{
+  margin-bottom: 7px;
+}
+#jobs-container a{
+  display: inline-block;
 }
 
-#jobs-container .new-job-label{
-  background-color: #ffc107;
-  padding: 5px;
-  text-align: center;
-}
 
 /* NOVAS VAGAS ADD */
 /* NOVAS VAGAS ADD */
@@ -168,6 +170,11 @@ h1{
 
 #add-form-container{
   margin-top: 100px;
+}
+#add-form-container #form-box{
+  padding: 20px;
+  box-shadow: 0px 0px 5px 5px #d6d6d6;
+  margin-bottom: 30px;
 }
 #add-form-container .form-item{
   margin-bottom: 20px;
@@ -188,6 +195,8 @@ h1{
   width: 100%;
   box-sizing: border-box;
   padding: 6px;
+  background-color: #eeeeee;
+  border: 2px solid #d6d6d6;
 }
 
 #add-form-container button{
@@ -214,6 +223,7 @@ h1{
 #job-view-container span{
   font-weight: bold;
 }
+
 @media (max-width: 600px) {
   .container{
     width: 95%;
@@ -244,6 +254,9 @@ h1{
   .header .menu a:hover{
     border-bottom: 2px solid #212529;
   }
+  #jobs-container #job-list{
+    grid-template-columns: 1fr;
+  }
 }
 @media (min-width: 600px) {
   .header .link-primary{
@@ -260,3 +273,4 @@ h1{
     color: rgba(255,255,255,.55);
   }
 }
+
