--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+
+
 </head>
 <body>
   <header class="header">
@@ -15,7 +20,7 @@
       <nav class="navbar">
         <a href="/" class="brand">Job Finder</a>
         <button >
-          X
+          <i class="fa-solid fa-bars" id="icon-mobile"></i>
         </button>
         <ul class="menu">
           <li><a href="/">Ver vagas</a></li>
